revert toList changes in DescribeLogDirsMapper.java